Prevent respondent info from being briefly visible before hidden

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -980,6 +980,9 @@ table.pwr {
         color: #aaa;
         margin-right: 5px;
     }
+    tr.respondent {
+        display: none;
+    }
 }
 
 #internal-alignment-breakdown {
